# neptu

./: .env.example  .gitignore  AGENTS.md  README.md  app.config.ts  app.vue  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
app-extensions/: Media.ts  SearchHighlight.ts  Wikilink.ts
app-plugins/: api.ts  index.ts
components/: AppPanel.vue  AppSidebar.vue  AppStatusBar.vue  ButtonGroupToggle.vue  ClearableInput.vue  CommandPalette.vue  ConvertImageDialog.vue  DailyNotesTree.vue  Editor.vue  EditorTabItem.vue  EditorTabs.vue  FavoritesList.vue  FileSidebar.vue  FileSidebarToolbar.vue  FirstRunDialog.vue  FrontmatterForm.vue  GitDiffModal.vue  GitDiffViewer.vue  ImageConvertOptionsForm.vue  PanelContainer.vue  PluginButtons.vue  PluginModalHost.vue  ProjectTree.vue  SearchPanel.vue  SettingsDialog.vue  SidebarDialogs.vue  SidebarDualColumn.vue  SidebarFooter.vue  SidebarSingleColumn.vue  TopBar.vue  TrashPanel.vue  TrashTree.vue  VaultSettingsDrawer.vue  VaultSidebarItem.vue  VaultTree.vue
composables/: useAutoReveal.ts  useBuiltinCommands.ts  useCommandPalette.ts  useConfig.ts  useConfirm.ts  useDailyNotes.ts  useDnd.ts  useEditorAssets.ts  useEditorImport.ts  useEditorTextClipboardImport.ts  useEditorTextExtensions.ts  useFrontmatter.ts  useFs.ts  useGit.ts  useImageConvert.ts  useLinkSuggestions.ts  useSettingsDialogDraft.ts  useSettingsPlugins.ts  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_ops.rs  git.rs  image_convert.rs  lib.rs  main.rs
(+106 files in other folders)
