[package]
name = "neptu"
version = "0.0.1"
description = "Neptu — markdown notes editor"
authors = ["Neptu"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "neptu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
tempfile = "3"
image = "0.25.6"
webp = "0.3.1"
little_exif = "0.6.23"

[features]
custom-protocol = ["tauri/custom-protocol"]
